--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 __pycache__/
 *.py[cod]
 
+*sqlite3
+
 # C extensions
 *.so
 
@@ -50,4 +52,4 @@ coverage.xml
 docs/_build/
 
 files/
-*sqlite3
+dev.py
