--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*.pyc
 *.py[cod]
 
 *sqlite3
@@ -53,3 +53,4 @@ docs/_build/
 
 files/
 dev.py
+*/__pycache__/*
