--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
 dj-database-url==2.2.0
 Django==5.0.6
+django-ckeditor==6.7.1
 django-cors-headers==4.4.0
 django-filter==24.3
+django-js-asset==2.2.0
 djangorestframework==3.15.1
 mysqlclient==2.2.4
 pillow==10.3.0
