--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ django-cors-headers==4.4.0
 django-filter==24.3
 django-js-asset==2.2.0
 djangorestframework==3.15.1
+jalali_core==1.0.0
+jdatetime==5.0.0
 mysqlclient==2.2.4
 pillow==10.3.0
 python-magic==0.4.27
